d2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-v2
  labels:
    app: test-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app-v2
  template:
    metadata:
      labels:
        app: test-app-v2
    spec:
      containers:
      - name: test-app-v2
        image: wuykimpang/test-app
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-v2
spec:
  selector:
    app: test-app-v2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
