basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apps-test.ucsd.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app-v1
            port:
              number: 3000
